--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -441,8 +441,8 @@
             $('.modal').removeClass('is-active');
         }
 
-        // Arrow keys for pagination if search is not focused
-        if (document.activeElement.id !== 'navbarSearch') {
+        // Arrow keys for pagination if no modal is open and search is not focused
+        if (!$('.modal.is-active').length && document.activeElement.id !== 'navbarSearch') {
             if (e.key === 'ArrowLeft' && currentPage > 1) {
                 changePage(currentPage - 1);
             } else if (e.key === 'ArrowRight' && currentPage < Math.ceil(filteredGames.length / pageSize)) {
