feat: enable edit game data for all games, fix translations, and refactor build_version

--- a/app/templates/modals_shared.html
+++ b/app/templates/modals_shared.html
@@ -384,8 +384,7 @@
                                 </div>
                                 <div class="edit-section">
                                     <button class="button is-fullwidth is-small is-ghost has-text-grey" 
-                                            onclick="editGameMetadata('${game.id}')" 
-                                            ${!game.owned ? 'disabled title="Jogo não está na biblioteca"' : ''}>
+                                            onclick="editGameMetadata('${game.id}')">
                                         <span class="icon"><i class="bi bi-pencil"></i></span>
                                         <span>Editar Dados</span>
                                     </button>
