fix: footer sticky CSS and update BUILD_VERSION

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -246,18 +246,18 @@
         }
 
         /* Sticky Footer */
-        html, body {
+        html {
             height: 100%;
         }
         
         body {
+            min-height: 100vh;
             display: flex;
             flex-direction: column;
         }
         
         body > main {
             flex: 1;
-            width: 100%;
         }
         
         .footer {
