fix: change 'Atualizado' to 'Sim' in wishlist library column

--- a/app/templates/wishlist.html
+++ b/app/templates/wishlist.html
@@ -150,7 +150,7 @@
 
                         // Check if already in library
                         if (owned) {
-                            ownedHtml = 'Atualizado';
+                            ownedHtml = 'Sim';
                             ownedClass = 'has-text-success';
                         } else {
                             ownedHtml = 'Não';
