--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -330,7 +330,7 @@
             <div class="columns is-vcentered is-mobile is-multiline">
                 <div class="column is-12-mobile is-4-tablet">
                     <p class="is-size-7 opacity-70">
-                        <span class="has-text-weight-bold">Build:</span> {{ build_version }}
+                        <span class="has-text-weight-bold">Build:</span> <span id="buildVersionDisplay">{{ build_version }}</span>
                     </p>
                 </div>
                 <div class="column is-12-mobile is-4-tablet has-text-centered-tablet">
@@ -356,6 +356,10 @@
             $.getJSON('/api/system/info', function (data) {
                 $('#idSource').text(data.id_source);
                 $('#updateSource').text(data.update_source);
+                // Update build version from API as fallback
+                if (data.build_version) {
+                    $('#buildVersionDisplay').text(data.build_version);
+                }
             }).fail(function () {
                 $('#idSource').text('N/A');
                 $('#updateSource').text('N/A');
